// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<IssuesMenu /> data 1`] = `
Array [
  <h2>
    Málstegund
  </h2>,
  <ul
    className="issue-menu__issue"
  >
    <li
      className="issue-menu__issue-item"
    >
      <a
        href="/loggjafarthing/1/thingmal?tegund=type"
        onClick={[Function]}
      >
        sub type name
      </a>
      <span
        className="issue-menu__issue-count"
      >
        (
        1
        )
      </span>
    </li>
  </ul>,
  <h2>
    Efnisflokkar
  </h2>,
  <ul
    className="issue-menu__category"
  >
    <li
      className="issue-menu__category-item"
    >
      <a
        href="/loggjafarthing/1/thingmal?flokkur=2"
        onClick={[Function]}
      >
        title
      </a>
      <span
        className="issue-menu__category-count"
      >
        (
        3
        )
      </span>
    </li>
  </ul>,
]
`;

exports[`<IssuesMenu /> default props 1`] = `
Array [
  <h2>
    Málstegund
  </h2>,
  <ul
    className="issue-menu__issue"
  />,
  <h2>
    Efnisflokkar
  </h2>,
  <ul
    className="issue-menu__category"
  />,
]
`;
